--- a/pages/supplierDetail.html
+++ b/pages/supplierDetail.html
@@ -90,13 +90,20 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
 					</div>
+					<span class="round-rect shopping-car hide">加入购物车</span>
+					<div class="shop-cartctrl">
+						<button class="ctrl minus">-</button>
+						<input class="ctrl quantity" placeholder="1">
+						<button class="ctrl plus">+</button>
+					</div>
 				</li>
 				<li>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>收藏</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
@@ -104,13 +111,20 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
 					</div>
+					<span class="round-rect shopping-car hide">加入购物车</span>
+					<div class="shop-cartctrl">
+						<button class="ctrl minus">-</button>
+						<input class="ctrl quantity" placeholder="1">
+						<button class="ctrl plus">+</button>
+					</div>
 				</li>
 				<li>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>收藏</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
@@ -118,13 +132,20 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
 					</div>
+					<span class="round-rect shopping-car hide">加入购物车</span>
+					<div class="shop-cartctrl">
+						<button class="ctrl minus">-</button>
+						<input class="ctrl quantity" placeholder="1">
+						<button class="ctrl plus">+</button>
+					</div>
 				</li>
 				<li>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>收藏</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
@@ -132,13 +153,20 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
 					</div>
+					<span class="round-rect shopping-car hide">加入购物车</span>
+					<div class="shop-cartctrl">
+						<button class="ctrl minus">-</button>
+						<input class="ctrl quantity" placeholder="1">
+						<button class="ctrl plus">+</button>
+					</div>
 				</li>
 				<li>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>收藏</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
@@ -146,10 +174,16 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+					<span class="round-rect shopping-car hide">加入购物车</span>
+					<div class="shop-cartctrl">
+						<button class="ctrl minus">-</button>
+						<input class="ctrl quantity" placeholder="1">
+						<button class="ctrl plus">+</button>
 					</div>
 				</li>
 			</ul>
@@ -168,7 +202,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-							<span class="price-n">￥24.1</span>
+							<span class="price-n"><i>￥</i>24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -184,7 +218,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-							<span class="price-n">￥24.1</span>
+							<span class="price-n"><i>￥</i>24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -200,7 +234,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-							<span class="price-n">￥24.1</span>
+							<span class="price-n"><i>￥</i>24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -216,7 +250,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-							<span class="price-n">￥24.1</span>
+							<span class="price-n"><i>￥</i>24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
