--- a/pages/index.html
+++ b/pages/index.html
@@ -109,7 +109,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -123,7 +123,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -137,7 +137,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -151,7 +151,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -165,7 +165,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -205,7 +205,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -219,7 +219,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -233,7 +233,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -247,7 +247,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
@@ -261,7 +261,7 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+						 <span class="price-n"><i>￥</i>24.1</span>
 						</p>
 					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
