--- a/pages/supplierDetail.html
+++ b/pages/supplierDetail.html
@@ -91,7 +91,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
@@ -112,7 +112,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
@@ -133,7 +133,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
@@ -154,7 +154,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
@@ -175,7 +175,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
 								<p class="spec">规格 550ml 成件规格 24瓶/件</p>
@@ -203,7 +203,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -219,7 +219,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -235,7 +235,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -251,7 +251,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -274,7 +274,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -290,7 +290,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -306,7 +306,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -322,7 +322,7 @@
 							</div>
 							<div class="info">
 								<p class="price">
-									<span class="price-n"><i>￥</i>24.1</span>
+									<span class="price-n"><i><i>￥</i></i>24.1</span>
 								</p>
 								<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
 								<p class="spec">规格：550ml 成件规格：24瓶/件</p>
@@ -332,7 +332,89 @@
 					</ul>
 				</div>
 				<!--收藏商品列表 end -->
+				<!--活动商品列表-->
+				<div class="list pro-goods-list">
+					<div class="sales-item">
+						<h4 class="sales-title">买满60件养乐多送10瓶可乐+10瓶200ml加多宝</h4>
+						<p class="time">有效时间：2017年4月24日至2017年5月20日</p>
+						<div class="cell fl single-item">
+							<div class="img">
+								<a href="" target="_blank" title="">
+									<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+								</a>
+							</div>
+							<div class="info">
+								<p class="price">
+								<span class="price-n"><i>￥</i>24.1</span><span class="amount fr">1234 | 件</span>
+								</p>
+								<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+								<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+							</div>
+						</div>
+						<div class="pro-list-more fl">
+							<div class="list-more">
+							<ul class="list">
+							<li class="cell">
+								<div class="img">
+									<a href="" target="_blank" title="">
+										<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+									</a>
+								</div>
+								<div class="info">
+									<p class="price">
+										<span class="price-n"><i>￥</i>24.1</span><span class="amount fr">1234 | 件</span>
+									</p>
+									<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+									<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+								</div>
+							</li>
+							<li>
+								<div class="img">
+									<a href="" target="_blank" title="">
+										<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+									</a>
+								</div>
+								<div class="info">
+									<p class="price">
+									<span class="price-n"><i>￥</i>24.1</span>
+									</p>
+									<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+									<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+								</div>
+								</li>
+								<li>
+								<div class="img">
+									<a href="" target="_blank" title="">
+										<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+									</a>
+								</div>
+								<div class="info">
+									<p class="price">
+									<span class="price-n"><i>￥</i>24.1</span>
+									</p>
+									<a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+									<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+								</div>
+								</li>
+							</ul>
+							</div>
+							<a href="javascript:;" class="page-prev">
+								<i class="iconfont icon-left-arrow">&#xe65e;</i>
+							</a>
+							<a href="javascript:;" class="page-next">
+								<i class="iconfont icon-left-arrow">&#xe64f;</i>
+							</a>
+						</div>
+						<div class="total-price">
+							合计：<span>99999.00</span>
+							立省：<span>88.88</span>
+						</div>
+						<span class="round-rect shopping-car">加入购物车</span>
+					</div>
+				</div>
+			<!--活动商品列表 end-->
 			</div>
+			
 			<!--商家公告-->
 			<div class="shop-news-public">
 				<h4 class="shop-news">商家公告</h4>
@@ -373,7 +455,7 @@
 			<!--公告详情 end-->
 		</div>
 		<!--购物车 -->
-		<div class="shop-cart">
+		<div class="shop-cart hide">
 				<div class="shop-cartbasket" id="shopbasket">
 						<div class="shop-head single" >
 							<div class="fl">
@@ -383,36 +465,85 @@
 							<div class="fr shop-quantity">商品数量：<span>0</span></div>
 						</div>
 					<!--购物车 空态-->
-					<div class="shop-cartbasket-empty">
+					<div class="shop-cartbasket-empty hide">
 						<i class="iconfont icon-add-cart">&#xe658;</i>
 						<p>购物车是空的，赶紧选购吧</p>
 					</div>
 					<!--购物车 空态 end-->
 					<!--购物车商品列表 -->
-					<div class="shop-cart-row">
-						<div class="cell itemname">买满60件养乐多送...</div>
-						<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
-						</div>
-						<div class="cell itemtotal">
-							<span class="unit">¥2.5</span>
-							<span class="total">¥1132323.22</span>
+					<div class="shop-cart-list">
+						<div class="shop-cart-row">
+							<div class="cell itemname">买满60件养乐多送...</div>
+							<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
 							</div>
-					</div>
-					<div class="shop-cart-row row-active">
-						<div class="cell itemname">买满60件养乐多送...</div>
-						<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+							<div class="cell itemtotal">
+								<span class="unit">¥2.5</span>
+								<span class="total">¥1132323.22</span>
+								</div>
 						</div>
-						<div class="cell itemtotal">
-							<span class="unit">¥211.5</span>
-							<span class="total">¥2323.22</span>
+						
+						<div class="shop-cart-row row-active">
+							<div class="cell itemname">买满60件养乐多送...</div>
+							<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
 							</div>
+							<div class="cell itemtotal">
+								<span class="unit">¥211.5</span>
+								<span class="total">¥2323.22</span>
+								</div>
+						</div>
+						<div class="shop-cart-row">
+							<div class="cell itemname">买满60件养乐多送...</div>
+							<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+							</div>
+							<div class="cell itemtotal">
+								<span class="unit">¥2.5</span>
+								<span class="total">¥1132323.22</span>
+								</div>
+						</div>
+						<div class="shop-cart-row">
+							<div class="cell itemname">买满60件养乐多送...</div>
+							<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+							</div>
+							<div class="cell itemtotal">
+								<span class="unit">¥2.5</span>
+								<span class="total">¥1132323.22</span>
+								</div>
+						</div>
+						<div class="shop-cart-row">
+							<div class="cell itemname">买满60件养乐多送...</div>
+							<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+							</div>
+							<div class="cell itemtotal">
+								<span class="unit">¥2.5</span>
+								<span class="total">¥1132323.22</span>
+								</div>
+						</div>
+						<div class="shop-cart-row">
+							<div class="cell itemname">买满60件养乐多送...</div>
+							<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+							</div>
+							<div class="cell itemtotal">
+								<span class="unit">¥2.5</span>
+								<span class="total">¥1132323.22</span>
+								</div>
+						</div>
+						<div class="shop-cart-row">
+							<div class="cell itemname">买满60件养乐多送...</div>
+							<div class="cell itemquantity"><button>-</button><input class="" value="1"><button>+</button>
+							</div>
+							<div class="cell itemtotal">
+								<span class="unit">¥2.5</span>
+								<span class="total">¥1132323.22</span>
+								</div>
+						</div>
 					</div>
 					<!--购物车商品列表 end -->
 			</div>
 			<div class="shop-cartfooter">
 				<i class="iconfont icon-add-cart">&#xe658;</i>
 				<span class="total-price">¥20.50</span>
-				<button class="cart-checkout">购物车是空的</button>
+				<button class="cart-checkout hide">购物车是空的</button>
+				<button class="cart-checkout acounted">去结算 &gt;</button>
 			</div>
 				
 		</div>
