--- a/pages/supplierSearch.html
+++ b/pages/supplierSearch.html
@@ -55,13 +55,13 @@
                                 <a href="#"><img src="" alt=""></a>好运来哈哈批发厂...
                             </div>
                             <p class="supplier-name">
-                                <i class="iconfont icon-search fl">&#xe654;</i> 李先生...
+                                <i class="iconfont icon-search fl">&#xe64c;</i> 李先生...
                             </p>
                             <p class="supplier-telphone">
-                                <i class="iconfont icon-search fl">&#xe654;</i> 13727272727 028-88
+                                <i class="iconfont icon-search fl">&#xe601;</i> 13727272727 028-88
                             </p>
                             <p class="supplier-address">
-                                <i class="iconfont icon-search fl">&#xe654;</i> 成都市锦江区风声路339号启动院
+                                <i class="iconfont icon-search fl">&#xe657;</i> 成都市锦江区风声路339号启动院
                             </p>
                             <p class="spec">
                                 介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍
