--- a/pages/index.html
+++ b/pages/index.html
@@ -79,21 +79,21 @@
 			<div class="shop-info cf">
 				<a href="" class="shop fl">
 					<img src="../images/good-logo.jpg" alt="" class="shop-img">
-					<div class="intro fr">
-						<p class="shop-name">好运来超市批发厂...</p>
-						<p class="shop-des">茶几ids爱欧迪静安寺安寺...</p>
-					</div>
 				</a>
+				<div class="intro fl">
+					<p class="shop-name">好运来超市批发厂...</p>
+					<p class="shop-des">茶几ids爱欧迪静安寺安寺...</p>
+				</div>
 				<a href="" class="sales fl">
 					<img src="../images/huod.png" alt="" class="shop-img">
-					<div class="intro fr">
+					<div class="sales-info fr">
 						<p class="shop-name">满99减10</p>
 						<p class="shop-des">买一送一</p>
 					</div>
 				</a>
 				<a href="" class="sales fl">
 					<img src="../images/huod.png" alt="" class="shop-img">
-					<div class="intro fr">
+					<div class="sales-info fr">
 						<p class="shop-name">满99减10</p>
 						<p class="shop-des">买一送一</p>
 					</div>
@@ -175,21 +175,21 @@
 			<div class="shop-info cf">
 				<a href="" class="shop fl">
 					<img src="../images/good-logo.jpg" alt="" class="shop-img">
-					<div class="intro fr">
-						<p class="shop-name">好运来超市批发厂...</p>
-						<p class="shop-des">茶几ids爱欧迪静安寺安寺...</p>
-					</div>
 				</a>
+				<div class="intro fl">
+					<p class="shop-name">好运来超市批发厂...</p>
+					<p class="shop-des">茶几ids爱欧迪静安寺安寺...</p>
+				</div>
 				<a href="" class="sales fl">
 					<img src="../images/huod.png" alt="" class="shop-img">
-					<div class="intro fr">
+					<div class="sales-info fr">
 						<p class="shop-name">满99减10</p>
 						<p class="shop-des">买一送一</p>
 					</div>
 				</a>
 				<a href="" class="sales fl">
 					<img src="../images/huod.png" alt="" class="shop-img">
-					<div class="intro fr">
+					<div class="sales-info fr">
 						<p class="shop-name">满99减10</p>
 						<p class="shop-des">买一送一</p>
 					</div>
