--- a/pages/supplierSearch.html
+++ b/pages/supplierSearch.html
@@ -11,7 +11,7 @@
 
 <body>
     <!--顶部-->
-    <div class="mod-full  shop-topbar">
+    <div class="mod-full shop-topbar pos-top">
         <header class="grid-m1210">
             <a href="/" target="_blank" class="topbar-item topbar-logo">
                 <img src="../images/xiehuo-logo.png" alt="写货宝"></a>
@@ -55,13 +55,13 @@
                                 <a href="#"><img src="" alt=""></a>好运来哈哈批发厂...
                             </div>
                             <p class="supplier-name">
-                                <i class="iconfont icon-search fl">&#xe64c;</i> 李先生...
+                                <i class="iconfont icon-search fl">&#xe62e;</i> 李先生...
                             </p>
                             <p class="supplier-telphone">
                                 <i class="iconfont icon-search fl">&#xe601;</i> 13727272727 028-88
                             </p>
                             <p class="supplier-address">
-                                <i class="iconfont icon-search fl">&#xe657;</i> 成都市锦江区风声路339号启动院
+                                <i class="iconfont icon-search fl">&#xe6c4;</i> 成都市锦江区风声路339号启动院
                             </p>
                             <p class="spec">
                                 介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍介绍
@@ -76,7 +76,7 @@
                         </div>
                         <div class="info">
                             <p class="price">
-                                <span class="price-n">￥24.1</span>
+                                <span class="price-n"><i>￥</i>24.1</span>
                             </p>
                             <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
                             <p class="spec">规格 550ml 成件规格 24瓶/件</p>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="info">
                             <p class="price">
-                                <span class="price-n">￥24.1</span>
+                                <span class="price-n"><i>￥</i>24.1</span>
                             </p>
                             <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
                             <p class="spec">规格 550ml 成件规格 24瓶/件</p>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="info">
                             <p class="price">
-                                <span class="price-n">￥24.1</span>
+                                <span class="price-n"><i>￥</i>24.1</span>
                             </p>
                             <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
                             <p class="spec">规格 550ml 成件规格 24瓶/件</p>
