add cover layer

--- a/pages/confirmOrder.html
+++ b/pages/confirmOrder.html
@@ -84,7 +84,7 @@
                     <span class="name">大大批发厂</span>
                 </a>
                 <div class="contact">
-                    <i class="iconfont icon-tel"></i>供应商电话<span>028-88515511</span>13521515418
+                    <img src="../images/tel.png" class="tel">供应商电话<span>028-88515511</span>13521515418
                 </div>
             </div>
 
@@ -226,6 +226,17 @@
 		</div>
 	</div>
 	<!-- 购物车列表 end -->
+	<!-- 半透明弹窗 -->
+	<div class="cover">
+		<div class="layer-main order-submit-success">
+			<img src="../images/loading-car.gif" class="loading">
+			<p>订单已提交成功</p>
+			<p><span class="countdown">4s</span>...跳转订单列表</p>
+			<a href="javascript:;" class="look-order">查看订单列表&gt;</a>
+			<a href="javascript:;" class="back-home">返回首页&gt;</a>
+		</div>
+	</div>
+	<!-- 半透明弹窗 end -->
 	<!-- 底部 -->
 	<footer class="mod-full">
 		<div class="grid-m1210">
